# r8

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  config.sql  dev.sql  modd.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: autofix.yml  main.yml
docs/: build.py  conf.py  index.html  index.rst  modd.conf
misc/: Caddyfile  crontab  nginx.conf  r8.service  status  teamnames.txt
misc/custom-template/: README.md  index.html
misc/folder-example/: title.txt
misc/folder-example/42/: description.html  flag.txt
r8/: __init__.py  __main__.py  cars.py  challenge.py  scoring.py  server.py  util.py
r8/builtin_challenges/: __init__.py  basic.py  docker.py  form_example.py  from_folder.py  stages_example.py  tcp_server.py  web_server.py
r8/builtin_challenges/docker-helloworld/: Dockerfile
r8/challenge_mixins/: __init__.py  docker.py  web_server.py
r8/cli/: __init__.py  challenges.py  events.py  flags.py  run.py  settings.py  sql.py  teams.py  users.py
r8/cli/password/: __init__.py  animals.txt
r8/rest_api/: __init__.py  auth.py  challenges.py  scoreboard.py
r8/static/: _index.html  index.html  scoreboard.html  scoretable.html
r8/static/css/: scoreboard.css  scoretable.css  style.css
r8/static/js/: babel.js  polyfills.js
test/: test.sql  test_cli.py  test_events.py  test_scoring.py
